--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,2 @@
-<%= javascript_pack_tag 'hello_react' %>
+<%= javascript_pack_tag 'application' %>
+<%= react_component 'User', { name: 'Nilton', username: 'niltonvasques', email: 'test' } %>
