--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Users</h1>
 
+<%= react_component 'Users', { users: @users, csrf_token: form_authenticity_token } %>
+
 <table>
   <thead>
     <tr>
