--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,19 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @account.description %>
-</p>
-
-<p>
-  <strong>Initial balance:</strong>
-  <%= @account.initial_balance %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @account.user %>
-</p>
+<%= react_component 'Account', @account %>
 
 <%= link_to 'Edit', edit_account_path(@account) %> |
 <%= link_to 'Back', accounts_path %>
