--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Editing User</h1>
+<%= react_component 'User', user: @user, editable: true, csrf_token: form_authenticity_token %>
 
 <%= render 'form', user: @user %>
 
