--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Account</h1>
 
-<%= render 'form', account: @account %>
+<%= react_component 'Account', account: @account, editable: true,
+                               csrf_token: form_authenticity_token %>
 
 <%= link_to 'Back', accounts_path %>
