--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Transaction</h1>
 
-<%= render 'form', transaction: @transaction %>
+<%= react_component 'Transaction', transaction: @transaction, editable: true,
+                                   csrf_token: form_authenticity_token %>
 
 <%= link_to 'Back', transactions_path %>
